Webpack bundles:  jQuery, Fomantic UI, htmx; Toast UI calendar

--- a/djangocms_events/templates/djangocms_events/event_list.html
+++ b/djangocms_events/templates/djangocms_events/event_list.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 {% addtoblock "js" %}
+<script src="{% static 'djangocms_events/webpack/index.bundle.js' %}"></script>
+{% endaddtoblock %}
+
+{% addtoblock "js" %}
 <script src="{% static 'djangocms_events/webpack/calendar.bundle.js' %}"></script>
 {% endaddtoblock %}
 
