--- a/djangocms_events/templates/djangocms_events/calendar_plugin.html
+++ b/djangocms_events/templates/djangocms_events/calendar_plugin.html
@@ -1,6 +1,10 @@
 {% load static i18n thumbnail sekizai_tags %}
 
 {% addtoblock "js" %}
+<script src="{% static 'djangocms_events/webpack/index.bundle.js' %}"></script>
+{% endaddtoblock %}
+
+{% addtoblock "js" %}
 <script src="{% static 'djangocms_events/webpack/calendar.bundle.js' %}"></script>
 {% endaddtoblock %}
 
