Include djangocms_events/semantic.min.js in template instead of webpack bundle
Fomantic UI components can’t accessed when the JS file is just imported in the webpack bundle.

--- a/djangocms_events/templates/djangocms_events/event_list.html
+++ b/djangocms_events/templates/djangocms_events/event_list.html
@@ -7,6 +7,10 @@
 {% endaddtoblock %}
 
 {% addtoblock "js" %}
+<script src="{% static 'djangocms_events/semantic.min.js' %}"></script>
+{% endaddtoblock %}
+
+{% addtoblock "js" %}
 <script src="{% static 'djangocms_events/webpack/calendar.bundle.js' %}"></script>
 {% endaddtoblock %}
 
