--- a/djangocms_events/templates/djangocms_events/event_list_plugin.html
+++ b/djangocms_events/templates/djangocms_events/event_list_plugin.html
@@ -4,6 +4,9 @@
 <script src="{% static 'djangocms_events/webpack/index.bundle.js' %}"></script>
 {% endaddtoblock %}
 
+{% addtoblock "js" %}
+<script src="{% static 'djangocms_events/semantic.min.js' %}"></script>
+{% endaddtoblock %}
 <h2 class="ui header">{% translate "Events" %}</h2>
 
 <div class="ui divided items">
