Optionally add FUI corner labels indicating calendar by colour to event pictures in list
Setting DJANGOCMS_EVENTS_CORNER_LABELS can be set.

--- a/djangocms_events/templates/djangocms_events/include/event_item.html
+++ b/djangocms_events/templates/djangocms_events/include/event_item.html
@@ -1,23 +1,26 @@
 {% load static i18n thumbnail %}
 <div class="event item">
-	{% if event.picture %}
-	<a class="ui large image djangocms-event-modal-trigger" href="#"
-	   hx-get="{% url 'djangocms_events:event_detail' pk=event.pk %}"
-	   hx-target="#djangocms-event-detail">
-		<img alt="{% trans 'event' %}"
-		     class="event-picture"
-		     src="{{ event.picture|thumbnail_url:'event-list' }}"
-		/>
-	</a>
-	{% else %}
-	<a class="ui large image event-picture djangocms-event-modal-trigger"
+
+	<a class="ui large fluid image djangocms-event-modal-trigger" href="#"
 	   hx-get="{% url 'djangocms_events:event_detail' pk=event.pk %}"
 	   hx-target="#djangocms-event-detail"
 	   style="text-align: center;"
 	>
-		<i class="ui huge grey calendar alternate outline icon"></i>
-	</a>
-	{% endif %}
+		{% if corner_labels %}
+			<div class="ui right corner label"
+			     style="border-color: {{ event.calendar.colour }};">
+			</div>
+		{% endif %}
+		{% if event.picture %}
+			<img alt="{% trans 'event' %}"
+			     class="event-picture"
+			     src="{{ event.picture|thumbnail_url:'event-list' }}"
+			/>
+		{% else %}
+			<i class="ui huge grey calendar alternate outline icon"></i>
+			</a>
+		{% endif %}
+
 	<div class="content">
 		<a class="header djangocms-event-modal-trigger" href="#"
 		   hx-get="{% url 'djangocms_events:event_detail' pk=event.pk %}"
