Scrolling content for event detail (FUI modal)

--- a/djangocms_events/templates/djangocms_events/event_detail.html
+++ b/djangocms_events/templates/djangocms_events/event_detail.html
@@ -5,7 +5,7 @@
 	{{ event.name }}
 </div>
 
-<div class="content">
+<div class="scrolling content">
 	<div class="description" style="flex: initial;"> {# avoid long lines #}
 		{% if event.get_picture %}
 			<img class="ui fluid image" alt="{% trans 'event' %}"
