Fix display of imported events in a table when calling import in browser

--- a/src/djangocms_events/templates/djangocms_events/calendar_import.html
+++ b/src/djangocms_events/templates/djangocms_events/calendar_import.html
@@ -7,7 +7,7 @@
 
 {{ calendars }}
 {% for calendar in calendars %}
-<table>
+<table class="ui selectable striped celled table">
 	<tr>
 		<th>uid</th>
 		<th>begin</th>
